fixed logo overflow error

--- a/client/src/components/navbar/Toolbar.css
+++ b/client/src/components/navbar/Toolbar.css
@@ -14,6 +14,7 @@
   align-items: center;
   padding: 0 1rem;
   z-index: 3;
+  overflow: hidden;
 }
 
 .toolbar__logo {
